# DocSearch

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes_documents.py  routes_query.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: init_db.py  models.py  session.py
apps/api/app/schemas/: documents.py  query.py
apps/api/app/services/: chunker.py  embeddings.py  generator.py  ingestion.py  opensearch_index.py  parser.py  query_expander.py  query_pipeline.py  reranker.py  retriever.py  storage_s3.py  vector_search.py
