[project]
name = "docsearch-api"
version = "0.1.0"
description = "DocSearch Phase 1 FastAPI application"
authors = [{ name = "DocSearch" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "opensearch-py>=2.4.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uvicorn]
factory = true

